# aeon-engine

./: .gcloudignore  .gitignore  AEON_MASTER_PLAN.md  AEON_SERVICES.md  AeonMain.cpp  CMakeLists.txt  CODEOWNERS  README.md  aeon_config.py  build.ps1  build_beta.ps1  cloud_build_pro.ps1  cloud_build_retro.ps1  finish-verification.js  get-token-dev.js  get-tokens.js  map-firebase-details.js  map-firebase-user.js  map-firebase.js  verify-dev.js  verify-dev2.js  verify-domain.js  verify-domain2.js  verify-domain3.js
.agents/workflows/: turbo.md
.github/: dependabot.yml
.github/workflows/: aeon_ci.yml  deploy_evolution.yml  retro_win32_test.yml
aeon-site/: firebase.json  index.html  package.json  projects-utf8.json  projects.json
aeon-site/.firebase/: hosting.ZGlzdA.cache
aeon-site/src/: App.jsx  index.css
aeon/agent/: AeonWebMCP.h
aeon/config/: AeonFeatures.cc  AeonFeatures.h  args.gn
aeon/evolution/: Dockerfile  aeon_build_worker.py  aeon_patch_writer.py  aeon_research_agent.py  aeon_self_cloud_trainer.py  aeon_silence_policy.py  aeon_vote_coordinator.py  cloudbuild.yaml  requirements.txt
aeon/shield/: AeonShield.cc
aeon/workspace/: AeonWorkspace.h
agent/: aeon_mind.py  aeon_self.py  aeon_silence_policy.py
agent/aeon-mcp/: package.json
ai/: aeon_component.h  aeon_journey_analytics.cpp  aeon_journey_analytics.h  aeon_tab_intelligence.cpp  aeon_tab_intelligence.h
cast/: aeon_cast.cpp  aeon_cast.h
cloud/: aeon_build_worker.py  aeon_cloud.cpp  aeon_cloud.h  aeon_patch_writer.py  aeon_research_agent.py  aeon_self_cloud_trainer.py  aeon_silence_policy.py  aeon_vote_coordinator.py  bootstrap_startup.ps1  chromium_build_vm_startup.ps1  cloud_build_orchestrator.ps1  startup_script.sh
cloud/aeon_ai_scanner/: Dockerfile  main.py  requirements.txt
cloud/aeon_dns/: Dockerfile  main.py
cloud/aeon_relay/: bridge_config.py  main.py
cloud/evolution_api/: Dockerfile  main.py  requirements.txt
core/: AeonVersion.h  aeon_component.cpp  aeon_component.h  main.cpp
core/agent/: AeonAgentPipe.cpp  AeonAgentPipe.h  AeonAgentStealth.cpp  AeonAgentStealth.h
core/crash/: AeonLog.cpp  AeonLog.h  Breadcrumbs.cpp  Breadcrumbs.h  CrashHandler.cpp  CrashHandler.h  CrashKeys.cpp  CrashKeys.h
core/download/: DownloadManager.cpp  DownloadManager.h
core/engine/: AeonBridge.cpp  AeonBridge.h  AeonEngine_Interface.h  TierDispatcher.cpp  TierDispatcher.h
core/extensions/: ExtensionRuntime.cpp  ExtensionRuntime.h
core/history/: HistoryEngine.cpp  HistoryEngine.h
core/memory/: TabSleepManager.cpp  TabSleepManager.h
core/network/: CircumventionEngine.cpp  CircumventionEngine.h  DnsResolver.cpp  DnsResolver.h  I2pdShim.cpp  I2pdShim.h  NetworkSentinel.cpp  NetworkSentinel.h
core/probe/: HardwareProbe.cpp  HardwareProbe.h
core/protocol/: NewTabHandler.cpp  NewTabHandler.h
core/security/: PasswordVault.cpp  PasswordVault.h
core/session/: SessionManager.cpp  SessionManager.h
core/settings/: SettingsEngine.cpp  SettingsEngine.h
core/tls/: TlsAbstraction.cpp  TlsAbstraction.h
core/ui/: AppMenu.cpp  AppMenu.h  BookmarkBar.cpp  BookmarkBar.h  BookmarkToast.cpp  BookmarkToast.h  BrowserChrome.cpp  BrowserChrome.h  DownloadButton.cpp  DownloadButton.h  EraChrome.cpp  EraChrome.h
dev-site/: .firebaserc  docusaurus.config.ts  firebase.json  package.json
dev-site/.firebase/: hosting.YnVpbGQ.cache
dev-site/blog/: 2026-04-13-introducing-dev-portal.mdx  authors.yml  tags.yml
dev-site/docs/: intro.mdx
engines/: aeon_ai.h
engines/blink/: CMakeLists.txt  aeon_blink_stub.cpp
history/: HistoryEngine.cpp  HistoryEngine.h  SQLITE_VENDOR.md
hive/: aeon_hive.h  aeon_hive.py
hive/aeon_hive_core/: Cargo.toml
hive/aeon_hive_core/src/: bridge.rs  dns_cache.rs  error.rs  identity.rs  lib.rs  node.rs  protocols.rs  relay.rs  reputation.rs  topics.rs
hive/relay/: docker-compose.yml  setup.sh
installer/: AeonBrowser-Setup.iss  AeonBrowser.iss  aeon_legacy_setup.iss  aeon_offline_installer.cpp  aeon_offline_installer.h  aeon_setup.iss  build.bat  build_installer.ps1
installer/assets/: asset_slice_prompt.md  convert_to_png.py  convert_to_png_v2.py
installer/src/: AeonCryptoDef.h  AeonInstaller.cpp  AeonInstaller.manifest  AeonInstaller.rc
internal_docs/: aeon_build_report.md  aeon_chronicle.md  aeon_gap_analysis.md  aeon_roadmap.md  aeon_roadmap_vs_reality.md  aeon_status_report.md
marketing/: aeon_landing.html
network/: aeon_circumvention.py  aeon_dns.h
patches/: aeon_chromium.patch
portal/: aeon_portal.cpp  aeon_portal.h
privacy/: ContentBlocker.cpp  ContentBlocker.h
resources/downloads/: downloads.html
resources/filters/: aeon_extra.txt  download_filterlists.ps1
resources/history/: history.html
resources/icons/: build_icon.ps1
resources/newtab/: newtab.html
resources/pages/: bookmarks.html  crash.html  diagnostics.html  downloads.html  drm-info.html  history.html  passwords.html  settings.html
resources/passwords/: passwords.html
retro/: .gcloudignore  Dockerfile  README.md  aeon16.c  aeon16_test.c  aeon_html4.c  aeon_html4.h  aeon_html4_adapter.c  aeon_html4_adapter.err  audit_skiplist.sh  bearssl_aeon_config.h  bearssl_bridge.c  bearssl_bridge.h  build_and_test.sh  build_docker.sh  build_full.sh  build_test.sh  cloudbuild.yaml  dosbox_headless.conf  gen_trust_anchors.ps1  html4.c  html4.h  makefile  makefile_32bit  reactos_test.sh  tls_test.c  trust_anchors.h  wolfssl_bridge.c  wolfssl_bridge.h
router/: Cargo.toml  aeon_router.h
router/src/: downloader.rs  gemini.rs  gopher.rs  lib.rs  router.rs  tor.rs
search/: aeon_search.py
sovereign/: aeon_sovereign.py  aeon_tls.cpp  aeon_tls.h
sovereign-keys/: .gitignore  KEY_INVENTORY.md  aeon_keygen.py  aeon_manifest_signing.pub  aeon_trust_signing.pub  aeon_update_signing.pub  pubkeys.h
spell/: aeon_spell.cpp  aeon_spell.h
telemetry/: PulseBridge.cpp  PulseBridge.h
tools/: fetch_bypass_tools.ps1
translate/: aeon_translate.cpp  aeon_translate.h
updater/: AutoUpdater.cpp  AutoUpdater.h  aeon_p2p_update.cpp  aeon_p2p_update.h  aeon_universal_updater.py
web/: index.html
(+33 files in other folders)
