# AeonBrowser — router/Cargo.toml
# Protocol router — compiled as a C-ABI DLL (cdylib)
# Handles: tor://, gemini://, gopher://, ftp://, ipfs://, i2p://

[package]
name    = "aeon_router"
version = "1.0.0"
edition = "2021"

[lib]
name      = "aeon_router"
crate-type = ["cdylib"]

[dependencies]
# Tor — Arti (pure-Rust Tor impl, C-ABI bindings in arti-client)
arti-client   = { version = "0.23", features = ["tokio", "rustls"] }
tor-rtcompat  = { version = "0.23", features = ["tokio"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# TLS
rustls      = "0.23"
webpki-roots = "0.26"

# SOCKS5 proxy support (wraps Tor / Shadowsocks tunnel)
tokio-socks = "0.5"

# HTTP via Tor
hyper       = { version = "1.3", features = ["full"] }
hyper-util  = "0.1"
http        = "1.1"

# Gemini protocol
# (no crate available — we implement the 1034-line spec ourselves)

# Gopher
# (plain TCP, implemented inline)

# IPFS HTTP gateway routing
# (routes ipfs://CID to a local gateway: localhost:8080 if ipfs daemon running,
#  else public.gateway.ipfs.io as fallback)

# Logging
tracing            = "0.1"
tracing-subscriber = "0.3"

# FFI helpers
libc = "0.2"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true   # Strip debug symbols for smaller DLL
