[package]
name = "aeon_hive_core"
version = "0.1.0"
edition = "2024"
description = "AeonHive P2P mesh backbone — iroh-powered node for Aeon Browser"
license = "MIT"
authors = ["Manuel A. Delgado <chronolapse411@gmail.com>"]
repository = "https://github.com/DelgadoLogic/aeon-hive"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Core P2P layer — iroh 0.97 (QUIC, NAT traversal, pkarr DHT)
# iroh itself uses ed25519-dalek 3.0.0-pre.1 internally
iroh = { version = "0.97", default-features = false, features = ["metrics"] }
iroh-base = "0.97"

# Crypto (matching iroh's own ed25519-dalek version)
ed25519-dalek = { version = "3.0.0-pre.1", features = ["serde", "rand_core"] }
blake3 = "1.8"

# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1.1", features = ["use-std"] }
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
rand = "0.9"
bytes = "1.11"
dashmap = "6"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
dirs-next = "2.0"

# Python FFI (optional, only for Python bridge builds)
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.44", features = ["full", "test-util"] }

[features]
default = []
python = ["dep:pyo3"]

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
